# dice-util

./: Cargo.toml
attest-data/: Cargo.toml
attest-data/src/: lib.rs
attest-time/: Cargo.toml
attest-time/src/: main.rs
barcode/: Cargo.toml
barcode/src/: lib.rs
ca-script/: ca-setup.sh  platform-identity-self.kdl
dice-cert-tmpl/src/: main.rs
dice-mfg-msgs/: Cargo.toml
dice-mfg-msgs/src/: lib.rs
dice-mfg/src/: lib.rs  main.rs
mock-log/: Cargo.toml  README.md
mock-log/src/: main.rs
platform-id-certgen/: Cargo.toml
platform-id-certgen/src/: main.rs
verifier/: Cargo.toml  build.rs
verifier-cli/: Cargo.toml
verifier-cli/src/: ipcc.rs  lib.rs  main.rs  sprot.rs
verifier-ipcc/: Cargo.toml
verifier/src/: lib.rs
